# robot-hat

./: .gitignore  README.md  i2samp.sh  install.py  pyproject.toml
dtoverlays/: sunfounder-robothat5.dts
robot_hat/: __device__.py  __init__.py  adc.py  basic.py  cli.py  config.py  device.py  filedb.py  i2c.py  modules.py  motor.py  music.py  pin.py  pwm.py  robot.py  servo.py  tts.py  utils.py
robot_hat.egg-info/: PKG-INFO  SOURCES.txt
tests/: tts_test.py
