[build-system]
requires = ["setuptools>=61.0","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robot_hat"
version = "0.1.0"
description = "SunFounder Robot Hat driver library"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
  "smbus2",
  "gpiozero",
  "RPi.GPIO>=0.7.0",
  "pyaudio",
]

[project.urls]
"Homepage" = "https://github.com/justinbetabox/robot-hat"

[project.entry-points."console_scripts"]
robot-hat-config = "robot_hat.cli:main"

[tool.setuptools.packages.find]
include = ["robot_hat*"]
exclude = ["tests*", "examples*"]