[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robot_hat"
authors = [
  { name="justinbetabox", email="justin@betaboxlearning.com" },
]
description = "Robot Hat Python library for Raspberry Pi"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
]
keywords = ["robot_hat", "betabox"]
dynamic = ["version"]

dependencies = [
    "smbus2",
    "pyaudio",
    "spidev",
    "pyserial",
    "pillow",
    "pygame>=2.1.2"
]

[project.scripts]
robot_hat = "robot_hat:__main__"

[project.urls]
Homepage = "https://github.com/justinbetabox/robot-hat"
Documentation = "https://github.com/justinbetabox/robot-hat#readme"
Repository = "https://github.com/justinbetabox/robot-hat"
Issues = "https://github.com/justinbetabox/robot-hat/issues"
Changelog = "https://github.com/justinbetabox/robot-hat/commits/main"

[tool.setuptools.packages.find]
include = ["robot_hat"]
exclude = ["setup.py", "docs", 'tests*', 'examples', 'workspace']

[tool.setuptools.dynamic]
version = {attr = "robot_hat.version.__version__"}